ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail195.hs
{-# LANGUAGE RankNTypes, GADTs #-}

module ShouldFail where

data Foo a where
  Foo :: Int -> Foo (forall a. a)
