ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail195.stderr

tcfail195.hs:6:3: error:
    • Illegal polymorphic type: forall a. a
    • In the definition of data constructor ‘Foo’
      In the data type declaration for ‘Foo’
